[project]
name = "eu-drug-war-map-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "geoalchemy2>=0.15",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.9",
    "tenacity>=9.0",
    "aiolimiter>=1.2",
]
